# deras

./: PRD.md  README.md  TASK.md  components.json  package.json
.agents/rules/: deras-project-rules-conventions.md
.agents/skills/deras-download-manager-agent/: SKILL.md
.github/workflows/: build.yml  release.yml
extension/: background.js  manifest.json  popup.html  popup.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  engine.rs  lib.rs  main.rs  models.rs  scheduler.rs  server.rs  speed_limiter.rs  state.rs
src/lib/: utils.ts
src/lib/commands/: index.ts
src/lib/components/: AddDownloadDialog.svelte  AnalyticsDashboard.svelte  BatchDownloadDialog.svelte  ChecksumDialog.svelte  DownloadList.svelte  NewDownloadModal.svelte  RefreshUrlModal.svelte  SettingsDialog.svelte  Sidebar.svelte  SiteManagerDialog.svelte  SpeedLimitDialog.svelte  TaskLogDialog.svelte  ThemeToggle.svelte
src/lib/types/: models.ts
src/routes/: +layout.svelte  +page.svelte
